--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
   "name": "hami-vuex",
   "version": "0.1.0",
   "description": "哈密瓜味的 Vuex ！",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "files": [
+    "dist/",
+    "LICENSE",
+    "README.md"
+  ],
   "scripts": {
+    "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,7 +22,14 @@
     "url": "https://github.com/guyskk/hami-vuex/issues"
   },
   "homepage": "https://github.com/guyskk/hami-vuex#readme",
-  "dependencies": {
-    "vuex": "^3.2.0"
+  "peerDependencies": {
+    "vuex": "^3.0.0"
+  },
+  "devDependencies": {
+    "copy-webpack-plugin": "^10.1.0",
+    "vue": "^2.6.14",
+    "vuex": "^3.6.2",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   }
 }
