--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "LICENSE",
     "README.md"
   ],
+  "browserslist": "> 0.1%, not dead",
   "scripts": {
-    "build": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c",
+    "test": "npm run build && jest --collect-coverage"
   },
   "repository": {
     "type": "git",
@@ -23,13 +24,19 @@
   },
   "homepage": "https://github.com/guyskk/hami-vuex#readme",
   "peerDependencies": {
-    "vuex": "^3.0.0"
+    "vue": ">=2.0.0",
+    "vuex": ">=3.0.0"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^10.1.0",
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@types/jest": "^27.0.3",
+    "babel-jest": "^27.4.4",
+    "jest": "^27.4.4",
+    "rollup": "^2.61.1",
+    "rollup-plugin-copy": "^3.4.0",
     "vue": "^2.6.14",
-    "vuex": "^3.6.2",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1"
+    "vuex": "^3.6.2"
   }
 }
