fix eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,5 +6,9 @@
   },
   "extends": [
     "eslint:recommended"
-  ]
+  ],
+  "parserOptions": {
+    "ecmaVersion": 2017,
+    "sourceType": "module"
+  }
 }
