--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,15 @@
   "extends": [
     "eslint:recommended"
   ],
+  "rules": {
+    "no-unused-vars": [
+      "error",
+      {
+        "varsIgnorePattern": "[iI]gnored?",
+        "argsIgnorePattern": "^_"
+      }
+    ]
+  },
   "parserOptions": {
     "ecmaVersion": 2017,
     "sourceType": "module"
