--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,4 +21,4 @@ jobs:
       - run: bash runtest.sh
       - uses: codecov/codecov-action@v2
         with:
-          files: ./coverage/*.*,./coverage4/*.*
+          files: ./coverage/coverage-final.json,./coverage4/coverage-final.json
