--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hami-vuex",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "哈密瓜味的Vuex! State management for Vue.js",
   "main": "dist/index.js",
   "files": [
@@ -11,6 +11,7 @@
   "browserslist": "> 0.1%, not dead",
   "scripts": {
     "build": "rollup -c",
+    "release": "npm run test && npm publish",
     "lint": "eslint src tests",
     "test:unit": "jest --config jest.config.json",
     "test": "npm run lint && npm run build && npm run test:unit"
